use URI instead of URL (#242)